--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   http: ^0.13.4
   firebase_core: ^1.10.0
   cloud_firestore: '^3.1.0'
+  firebase_analytics: '^9.0.0-dev.3'
+  provider: ^6.0.1
 
 dev_dependencies:
   flutter_test:
