--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   cloud_firestore: '^3.1.0'
   firebase_analytics: '^9.0.0-dev.3'
   provider: ^6.0.1
+  shimmer: ^2.0.0
 
 dev_dependencies:
   flutter_test:
