--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   firebase_analytics: '^9.0.0-dev.3'
   provider: ^6.0.1
   shimmer: ^2.0.0
+  google_fonts: ^2.1.0
+  flutter_slidable: ^1.1.0
 
 dev_dependencies:
   flutter_test:
